# gpui-memory-game

./: .gitignore  Cargo.toml  LICENSE.md  Readme.md  build.rs
.cargo/: config.toml
.github/workflows/: build.yml  ci.yml
macos/: entitlements.plist
src/: assets.rs  colors.rs  integration_tests.rs  main.rs  memory_game.rs  styled.rs  utils.rs
src/components/: button.rs  card.rs  header.rs  mod.rs  tailwind_indicator.rs
