[package]
name = "gpui-memory-game"
version = "0.2.1"
description = "Memory Match Game"
keywords = ["gpui", "game", "ui"]
categories = ["game"]
homepage = "https://github.com/justjavac/gpui-memory-game"
repository = "https://github.com/justjavac/gpui-memory-game"
authors = ["迷渡 <justjavac@gmail.com>"]
license = "MIT"
readme = "README.md"
edition = "2024"
resolver = "2"

[dependencies]
anyhow = "1.0.100"
gpui = "0.2.1"
rand = "0.9.2"
rust-embed = "8.9.0"
smallvec = "1.15.1"
mimalloc = "0.1.48"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.62.2", features = ["Win32_System_Console"] }

[target.'cfg(target_os = "windows")'.build-dependencies]
winapi = { version = "0.3.9", features = ["winnt"] }
winres = "0.1.12"

[[bin]]
name = "gpui-memory-game"
path = "src/main.rs"

[package.metadata.winres]
OriginalFilename = "gpui-memory-game.exe"
LegalCopyright = "MIT."
ProductName = "gpui-memory-game"
FileDescription = "Memory Match Game"

[package.metadata.packager]
product-name = "gpui-memory-game"
identifier = "com.justjavac.gpui-memory-game"
copyright = "Copyright (c) justjavac 2025. All rights reserved."
category = "Game"
icons = ["assets/icon-*.png"]

[package.metadata.packager.macos]
entitlements = "macos/entitlements.plist"

[profile.dev]
opt-level = 0
codegen-units = 256
incremental = true
split-debuginfo = "unpacked"

[profile.dev.package."*"]
opt-level = 1

[profile.test]
opt-level = 0
codegen-units = 256
incremental = true

[profile.release]
opt-level = 'z'
codegen-units = 1
lto = true
panic = "abort"
strip = true
